# devix

./: ARCHITECTURE-REFACTOR.md  CLAUDE.md  Cargo.toml  LAYERING-NOTE.md  PHASE-3-DESIGN.md  PLAN.md  REORG-PROMPTS.md  RUNTIME-SPEC.md
crates/app/: Cargo.toml
crates/app/src/: app.rs  application.rs  clipboard.rs  context.rs  event_sink.rs  events.rs  lib.rs  lsp.rs  main.rs  plugin.rs  pulse.rs  render.rs  runtime.rs  service.rs  watcher.rs
crates/app/src/services/: input.rs  mod.rs  plugin.rs
crates/app/tests/: plugin_sidebar.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/collection/: Cargo.toml
crates/collection/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: builtins.rs  context.rs  dispatch.rs  keymap.rs  lib.rs  modal.rs  registry.rs
crates/commands/src/cmd/: clipboard.rs  edit.rs  file.rs  mod.rs  motion.rs  mouse.rs  palette.rs  split.rs  tab.rs
crates/config/: Cargo.toml
crates/config/src/: commands.rs  keymap.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  clipboard.rs  lib.rs  walk.rs
crates/devix-core/: Cargo.toml
crates/devix-core/examples/: file_tree.lua
crates/devix-core/manifests/: builtin.json  manifest.schema.json
crates/devix-core/src/: action.rs  bus.rs  composites.rs  event.rs  highlight_actor.rs  lib.rs  manifest_loader.rs  pane.rs  plugin.rs  settings_store.rs  supervise.rs  theme.rs  theme_store.rs  walk.rs
crates/devix-core/src/editor/: buffer.rs  cursor.rs  document.rs  editor.rs  focus_chain.rs  frame.rs  mod.rs  modal_slot.rs  registry.rs  tree.rs  view.rs
crates/devix-core/src/editor/commands/: builtins.rs  context.rs  dispatch.rs  keymap.rs  modal.rs  registry.rs
crates/devix-core/src/editor/commands/cmd/: clipboard.rs  edit.rs  file.rs  mod.rs  motion.rs  mouse.rs  palette.rs  split.rs  tab.rs  theme.rs
crates/devix-core/src/editor/editor/: focus.rs  hittest.rs  ops.rs
crates/devix-core/src/plugin/: bridge.rs  host.rs  mod.rs  pane_handle.rs  runtime.rs  view_lua.rs
crates/devix-core/src/widgets/: layout.rs  mod.rs  palette.rs  popup.rs  sidebar.rs  tabstrip.rs
crates/devix-core/tests/: builtin_manifest.rs  plugin_e2e.rs
crates/devix-protocol/: Cargo.toml
crates/devix-protocol/examples/: dump_manifest_schema.rs
crates/devix-protocol/src/: input.rs  lib.rs  manifest.rs  path.rs  protocol.rs  pulse.rs  view.rs
crates/devix-syntax/: Cargo.toml
crates/devix-syntax/src/: lib.rs
crates/devix-text/: Cargo.toml
crates/devix-text/src/: selection.rs
crates/devix-tui/: Cargo.toml
crates/devix-tui/src/: application.rs  context.rs  effect.rs  event_sink.rs  input.rs  input_thread.rs  interpreter.rs  lib.rs  main.rs  view_paint.rs
crates/devix-tui/tests/: plugin_sidebar.rs
crates/document/: Cargo.toml
crates/document/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  cursor.rs  document.rs  editor.rs  frame.rs  layout.rs  lib.rs  popup_state.rs  services.rs  tree.rs
crates/editor/src/commands/: builtins.rs  context.rs  dispatch.rs  keymap.rs  mod.rs  modal.rs  registry.rs
crates/editor/src/commands/cmd/: clipboard.rs  edit.rs  file.rs  mod.rs  motion.rs  mouse.rs  palette.rs  split.rs  tab.rs
crates/editor/src/editor/: focus.rs  hittest.rs  ops.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  coord.rs  framing.rs  jsonrpc.rs  lib.rs  translate.rs  uri.rs
crates/panes/: Cargo.toml
crates/panes/src/: composites.rs  geom.rs  layout_geom.rs  lib.rs  pane.rs  theme.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/plugin/tests/: plugin_e2e.rs
crates/surface/: Cargo.toml
crates/surface/src/: builtins.rs  cmd.rs  context.rs  cursor.rs  dispatch.rs  frame.rs  keymap.rs  layout.rs  lib.rs  modal.rs  services.rs  surface.rs  tree.rs  view.rs
crates/surface/src/commands/: builtins.rs  context.rs  dispatch.rs  modal.rs  registry.rs
crates/surface/src/commands/cmd/: edit.rs  file.rs  mod.rs  mouse.rs  palette.rs  split.rs  tab.rs
crates/surface/src/surface/: focus.rs  hittest.rs  ops.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/text/src/: lib.rs  selection.rs  transaction.rs
crates/ui/: Cargo.toml
crates/ui/src/: editor.rs  layout.rs  lib.rs  palette.rs  popup.rs  sidebar.rs  status.rs  tabstrip.rs
crates/view/: Cargo.toml
crates/views/: Cargo.toml
crates/views/src/: editor.rs  layout.rs  lib.rs  palette.rs  symbols.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: action.rs  builtins.rs  cmd.rs  command.rs  context.rs  dispatch.rs  document.rs  frame.rs  keymap.rs  layout.rs  lib.rs  modal.rs  overlay.rs  state.rs  tree.rs  view.rs  workspace.rs
crates/workspace/src/workspace/: focus.rs  hittest.rs  ops.rs
docs/: foundations-review-followups.md  principles.md  prompt.md  roadmap.md
docs/specs/: core-decoupling.md  crates.md  foundations-review.md  frontend.md  manifest.md  namespace.md  protocol.md  pulse-bus.md
docs/tasks/: 10-create-devix-protocol.md  100-editor-split-pane-registry.md  101-focus-chain-owner.md  102-ops-owner.md  103-modal-slot-owner.md  104-stage-10-regression-gate.md  11-create-devix-core.md  110-plugin-contributes-commands.md  111-plugin-contributes-panes.md  112-plugin-contributes-themes.md  113-plugin-contributes-settings.md  12-rename-app-to-tui.md  120-view-combinators.md  121-pulse-filter-combinators.md  122-manifest-composition.md  13-stage-1-regression-gate.md  130-hot-path-locality.md  131-pulse-delivery-alloc.md  132-view-allocation.md  133-final-regression-bench.md  20-workspace-deps-hygiene.md  21-add-skeleton-deps.md  22-drop-dead-modules.md  23-test-reorganization.md  24-clippy-baseline.md  25-rename-substrate-dirs.md  30-namespace-skeleton.md  31-pulse-bus-skeleton.md  32-protocol-skeleton.md  33-manifest-skeleton.md  40-view-enum.md  41-style-color-serde.md  42-input-event-serde.md  43-core-view-producer.md  44-tui-view-interpreter.md  50-buffers-onto-namespace.md  51-cursors-onto-namespace.md  52-panes-onto-namespace.md  53-commands-onto-namespace.md  54-keymap-onto-namespace.md  (+22 more)
(+6 files in other folders)
