[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.80"

[workspace.dependencies]
# external
anyhow = "1"
thiserror = "1"
ropey = "1.6"
unicode-segmentation = "1.12"
ratatui = "0.29"
crossterm = "0.28"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"
nucleo-matcher = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# internal
devix-panes = { path = "crates/panes" }
devix-text = { path = "crates/text" }
devix-editor = { path = "crates/editor" }
devix-syntax = { path = "crates/syntax" }
devix-plugin = { path = "crates/plugin" }

[profile.release]
lto = "thin"
codegen-units = 1
