[package]
name = "devix"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "devix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
devix-text.workspace = true
devix-core.workspace = true
devix-ui.workspace = true
devix-editor.workspace = true
devix-plugin.workspace = true
arboard = { version = "3.4", default-features = false }
