[package]
name = "devix"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
name = "devix_app"
path = "src/lib.rs"

[[bin]]
name = "devix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
devix-text.workspace = true
devix-protocol.workspace = true
devix-core.workspace = true
arboard = { version = "3.4", default-features = false }
tokio.workspace = true
