[package]
name = "devix-commands"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
devix-core.workspace = true
devix-text.workspace = true
devix-editor.workspace = true
devix-surface.workspace = true
devix-ui.workspace = true
nucleo-matcher.workspace = true
anyhow.workspace = true
