[package]
name = "devix-document"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ropey.workspace = true
tokio.workspace = true
lsp-types.workspace = true
devix-buffer.workspace = true
devix-syntax.workspace = true
devix-lsp.workspace = true
slotmap = "1"
notify = "6"
