[package]
name = "devix-editor"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
ropey.workspace = true
crossterm.workspace = true
nucleo-matcher.workspace = true
devix-text.workspace = true
devix-panes.workspace = true
devix-syntax.workspace = true
slotmap = "1"
notify = "6"
