[package]
name = "devix-plugin"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
tokio.workspace = true
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
devix-core.workspace = true
devix-commands.workspace = true
crossterm.workspace = true

[dev-dependencies]
devix-surface.workspace = true
devix-editor.workspace = true
devix-ui.workspace = true
