[package]
name = "devix-surface"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
devix-text.workspace = true
devix-core.workspace = true
devix-editor.workspace = true
devix-workspace.workspace = true
devix-ui.workspace = true
crossterm.workspace = true
nucleo-matcher.workspace = true
slotmap = "1"
anyhow = { workspace = true }
