[package]
name = "devix-ui"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ratatui.workspace = true
ropey.workspace = true
crossterm.workspace = true
devix-buffer.workspace = true
devix-collection.workspace = true
devix-syntax.workspace = true
devix-config.workspace = true
devix-workspace.workspace = true
