[package]
name = "devix-views"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ratatui.workspace = true
ropey.workspace = true
crossterm.workspace = true
devix-buffer.workspace = true
devix-core.workspace = true
devix-syntax.workspace = true
devix-workspace.workspace = true
devix-ui.workspace = true
lsp-types.workspace = true
