[package]
name = "devix-workspace"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
devix-buffer.workspace = true
devix-collection.workspace = true
devix-lsp.workspace = true
devix-syntax.workspace = true
lsp-types.workspace = true
ropey.workspace = true
tokio.workspace = true
arboard = { version = "3.4", default-features = false }
slotmap = "1"
notify = "6"
anyhow = { workspace = true }
ratatui = { workspace = true }
nucleo-matcher = { workspace = true }
